--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "evanonearth",
   "homepage": "https://evanonearth.xyz",
+  "version": "4.20.69",
   "engines": { 
-    "node": "16.13.1" 
+    "node": "16.20.2" 
   }, 
   "dependencies": {
     "@livepeer/ai": "^0.4.1",
